fixing vertical spacing

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -998;
   backdrop-filter: blur(10px);
@@ -49,7 +49,6 @@ body {
 section {
   display: inline-flex;
   padding: 0 15vw;
-  width: 70vw;
   max-width: 100%;
 }
 
